添加LangGraph ACT Agent演示脚本和MCP工具集成
- 新增 langgraph_act_agent_demo.py: 集成MCP工具的ACT Agent
- 集成adb_mcp_driver.py中的移动设备控制工具
- 支持GPT-4o模型，增强AI推理能力
- 添加ACT_Agent_使用说明.md详细文档
- 更新requirements.txt添加LangGraph依赖
- 更新config.json支持MCP服务器配置
- 支持Android设备自动化测试和操作
- 包含Action-Criticism-Tool-use智能循环
- 提供完整版和简化版演示模式

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "api_key": "sk-SvVkWX26RdugqcYlA1Bc1f8452D9465cA7Af7754Ad173628",
         "base_url": "http://116.63.86.12:3000/v1/",
         "model": "gpt-4o",
-        "max_tokens": 50,
+        "max_tokens": 2000,
         "temperature": 0.1,
         "batch_size": 3,
         "request_timeout": 30,
@@ -15,5 +15,12 @@
     "delays": {
         "between_requests": 0.1,
         "between_batches": 0.5
+    },
+    "client": {
+        "mcp_server_url": "http://127.0.0.1:8568/sse",
+        "screenshot_dir": "screenshots"
+    },
+    "adb": {
+        "device_id": "127.0.0.1:5555"
     }
 } 
