--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ torch
 easyocr
 torchvision
 supervision==0.18.0
-openai==1.3.5
+openai>=1.91.0
 transformers
 ultralytics==8.3.70
 azure-identity
@@ -30,3 +30,6 @@ screeninfo
 uiautomation
 dashscope
 groq
+langgraph>=0.3.30
+langchain-core
+langchain-openai
